log
Thu Apr  7 21:10:00 -04 2022: 
 tests:  0|6
total_score: 0/70
c03180f
Thu Apr  7 21:17:57 -04 2022: 
 hashmap.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
In file included from test.c:4:
./hashmap.c:57:5: error: variable 'mapa' is uninitialized when used here [-Werror,-Wuninitialized]
    mapa->buckets = NULL;
    ^~~~
./hashmap.c:56:18: note: initialize the variable 'mapa' to silence this warning
    HashMap *mapa;
                 ^
                  = NULL
1 error generated.
Compilation failed
5eed410
Thu Apr  7 21:20:03 -04 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
6803bd3
Thu Apr  7 21:21:03 -04 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
8129405
Thu Apr  7 21:23:14 -04 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
667fd44
Thu Apr  7 21:47:44 -04 2022: 
 hashmap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  0|0
9c5c6fe
Thu Apr  7 21:48:15 -04 2022: 
 hashmap.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  0|0
ac447f9
Thu Apr  7 21:48:55 -04 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
1eb2410
Thu Apr  7 21:52:13 -04 2022: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|0
64c271a
Thu Apr  7 21:53:06 -04 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
7f46070
Thu Apr  7 21:55:02 -04 2022: 
 hashmap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  0|0
07af0c9
